--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </script>
 </head>
 <body>
-    <table borde="1">
+    <table border="1">
         <tr>
             <td width="100" height="100" id="c0" onclick="pcelda(0)"></td>
             <td width="100" height="100" id="c1" onclick="pcelda(1)"></td>
